<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickedJava"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:id="@+id/java"
        android:text="@string/java"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickedCSharpe"
        android:layout_margin="10dp"
        android:id="@+id/CSharpe"
        android:textSize="20sp"
        android:text="@string/csharpe"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickedScala"
        android:textSize="20sp"
        android:id="@+id/scala"
        android:layout_margin="10dp"
        android:text="@string/scala"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickedC"
        android:id="@+id/c"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/c"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickedPython"
        android:id="@+id/python"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/python"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickedJavascript"
        android:id="@+id/javascript"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:text="@string/javascript"/>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:id="@+id/logout"
        android:text="@string/log_out"/>
</RelativeLayout>