<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailId"
        android:hint="@string/mail"
        android:layout_margin="2dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_below="@+id/emailId"
        android:hint="@string/password"
        android:id="@+id/password"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up"
        android:layout_margin="2dp"
        android:id="@+id/sign_Up_in_mainactivity"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/sign_Up_in_mainactivity"
        android:layout_margin="2dp"
        android:textColor="@color/green"
        />

</RelativeLayout>